# GeneticAlgorithm

./: BinChromosome.h  BinGenotype.cpp  BinGenotype.h  BinOnePointCross.cpp  BinOnePointCross.h  BinTwoPointCross.h  BinUniformCross.cpp  BinUniformCross.h  CMakeLists.txt  Cross.h  GeneticAlgorithm.h  Mutation.h  OneBitMutation.h  RandomMachine.cpp  RandomMachine.h  VariableDescription.cpp  VariableDescription.h  canonical.cpp  main.cpp
Binary/: BinChromosome.cpp  BinGenotype.cpp  BinGenotype.h  BinOnePointCross.h  BinTwoPointCross.cpp  BinTwoPointCross.h  BinUniformCross.h  OneBitMutation.cpp  OneBitMutation.h
